internal/compiler/testdata/fuzz/crashers/65709cf8b93aa01fcc8161c641294524b0ee23b5.output
panic: runtime error: invalid memory address or nil pointer dereference
[signal SIGSEGV: segmentation violation code=0x1 addr=0x0 pc=0x1140682]

goroutine 1 [running]:
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c040, 0x0, 0x11a7b60, 0xc000010030, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:241 +0x52
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c040, 0xc00006ab00, 0x100b456, 0xc00002a400, 0x40, 0x38)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:257 +0x7a4
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c040, 0xc00006a2c0, 0xc000071a00, 0x10f988e, 0xc0000ca080, 0x2)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:276 +0x1b9
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileResultColumn(0xc00000c040, 0xc000062060, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0xc, 0x10)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:228 +0x225
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCoreSelect(0xc00000c040, 0xc000068000, 0x100b456, 0xc00002a480, 0x40, 0x38)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:142 +0xf3
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCore(0xc00000c040, 0xc000068000, 0x0, 0xc000071c60, 0x1010f93, 0xc00002a480)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:117 +0x129
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelect(0xc00000c040, 0xc000066000, 0x0, 0x2, 0xc000016130, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:70 +0xb6
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileInternal(0xc00000c040, 0xc000064000, 0x0, 0x2, 0xc000016130, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:54 +0x7e
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).Compile(0xc00000c040, 0xc000064000, 0x0, 0x0, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:34 +0x54
github.com/tomarrell/lbadd/internal/compiler.Fuzz(0x6a21000, 0x11, 0x11, 0x4)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler_fuzzy.go:36 +0x3a2
go-fuzz-dep.Main(0xc000071f70, 0x1, 0x1)
	go-fuzz-dep/main.go:36 +0x1ad
main.main()
	github.com/tomarrell/lbadd/internal/compiler/go.fuzz.main/main.go:15 +0x52
exit status 2